tests/negative/rebinding.spk
; Binding a name twice in the same scope.
(let x 1)
(let x 2)
